сделал ветку nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 </head>
 <body>
   <header class="header"> <!-- 2 -->
-    <nav class="nav"></nav> <!-- 1 -->
+    <nav class="nav">
+      <div class="nav__logo"><img src="img/logo.png" alt=""></div> <!-- 1 -->
+      <ul class="nav__list"> <!-- 1 -->
+        <li class="nav__item"><a href="#" class="nav__link">Кроссовки</a></li> <!-- 1 -->
+        <li class="nav__item"><a href="#" class="nav__link">Кеды</a></li> <!-- 1 -->
+        <li class="nav__item"><a href="#" class="nav__link">Футболки</a></li> <!-- 1 -->
+        <li class="nav__item"><a href="#" class="nav__link">Шорты</a></li> <!-- 1 -->
+        <li class="nav__item"><a href="#" class="nav__link">Майки</a></li> <!-- 1 -->
+        <li class="nav__item"><a href="#" class="nav__link">Олимпийки</a></li> <!-- 1 -->
+        <li class="nav__item"><a href="#" class="nav__link">Толстовки</a></li> <!-- 1 -->
+      </ul>
+    </nav> <!-- 1 -->
     <div class="header__content"></div> <!-- 2 -->
   </header>
   <main>
